--- a/app/views/blog_articles/_form.html.erb
+++ b/app/views/blog_articles/_form.html.erb
@@ -12,16 +12,15 @@
 <% end %>
 
 <div class="field">
-  <%= f.label :title %><br />
+  <b><%= f.label :title %></b>
   <%= f.text_field :title %>
 </div>  
 <div class="field">
-  <%= f.label :description %><br />
+  <b><%= f.label :description %></b>
   <%= f.text_field :content %>
 </div>  
 <div class="field">
-  <%= f.check_box :favorite %>
-  <%= f.label 'Favorite'%><br />
+  <b><%= f.label 'Favorite'%></b> <%= f.check_box :favorite %>
 </div>  
 <div class="actions">
   <%= f.submit %>
